# compress-video

./: .gitignore  README.md  gui.py  gui.pyw  launch.py  main.py  pyproject.toml  setup.cfg
src/compress-video/: gui.py
src/smallvid/: __main__.py  gui.py  main.py  utils.py
